--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,12 +6,7 @@ development:
   adapter: async
 
 test:
-  adapter: test
+  adapter: async
 
 production:
-  adapter: solid_cable
-  connects_to:
-    database:
-      writing: cable
-  polling_interval: 0.1.seconds
-  message_retention: 1.day
+  adapter: async
